--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">手机卫士</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-	<string name="sample_device_admin_description">手机超强设备管理器，可以一键锁屏，清除数据等功能</string>
+    <string name="sample_device_admin_description">手机超强设备管理器，可以一键锁屏，清除数据等功能</string>
     <string name="sample_device_admin">超强设备管理器</string>
+    <string name="title_activity_app_manager">AppManagerActivity</string>
 </resources>
